--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1079,4 +1079,44 @@ label {
 .search-wrap .search-menu.active {
   background: #2EA4FC;
   color: #fff;
+}
+
+.user-photo-manager-wrap {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+}
+.user-photo-manager-wrap .user-single-photo {
+  height: 170px;
+  width: 100%;
+  background-position: top;
+  background-size: cover;
+  border-radius: 5px;
+  position: relative;
+  background-color: #EDF4F6;
+}
+.user-photo-manager-wrap .user-single-photo button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border: 0;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+  font-size: 20px;
+  box-shadow: 0 3px 51px #2EA4FC;
+}
+
+.update-btn {
+  background: #2EA4FC;
+  color: #fff;
+  border: 0;
+  width: 60%;
+  padding: 15px;
+  border-radius: 100px;
+  margin: 0 auto;
+  text-align: center;
+  box-shadow: 0 3px 51px rgba(46, 164, 252, 0.52);
 }/*# sourceMappingURL=index.css.map */
