--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1225,10 +1225,40 @@ label {
 
 // User Photo Manager 
 .user-photo-manager-wrap{
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    gap: 10px;
     .user-single-photo{
-        height: 300px;
-        width: 100px;
-        background-position: center;
+        height: 170px;
+        width: 100%;
+        background-position: top;
         background-size: cover;
+        border-radius: 5px;
+        position: relative;
+        background-color: $ColorWhite3;
+        button{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: $ColorWhite;
+            border: 0;
+            height: 50px;
+            width: 50px;
+            border-radius: 50px;
+            font-size: 20px;
+            box-shadow: 0 3px 51px $ColorSkyblue;
+        }
     }
+}
+.update-btn{
+    background: #2EA4FC;
+    color: #fff;
+    border: 0;
+    width: 60%;
+    padding: 15px;
+    border-radius: 100px;
+    margin: 0 auto;
+    text-align: center;
+    box-shadow: 0 3px 51px rgba(46, 164, 252, 0.52);
 }
