--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1262,3 +1262,24 @@ label {
     text-align: center;
     box-shadow: 0 3px 51px rgba(46, 164, 252, 0.52);
 }
+
+
+// Settings Page 
+
+.single-settings-widget {
+    // background-color: $ColorWhite;
+    margin-bottom: 50px;
+	text-align: center;
+	padding: 30px;
+	border-radius: 52px;
+	box-shadow: 0 70px 85px rgb(0,0,0,16%);
+    h4{
+        font-size: $fs-h4;
+        font-weight: $fw-bold;
+        color: $ColorTitle;
+        margin: 15px 0;
+    }
+    p{
+        margin-bottom: 30px;
+    }
+}
