--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+@import url(./custome-animition-modal.css);
 .shadow-2 {
   box-shadow: 0 0 76px rgba(0, 0, 0, 0.07);
 }
@@ -1136,4 +1137,59 @@ label {
 }
 .single-settings-widget p {
   margin-bottom: 30px;
+}
+
+.referrals-wrap {
+  margin-top: -15px !important;
+}
+
+.referls-dp {
+  height: 120px;
+  width: 120px;
+  border-radius: 100px;
+  margin: 0 auto;
+  background-size: cover;
+  background-position: top;
+}
+
+.modal-box-header h3 {
+  font-weight: var(--mf-fw-bold);
+}
+
+.modal-box-main {
+  margin-bottom: 30px;
+}
+
+.modal-share-link p {
+  border-radius: 3em;
+  font-size: 14px;
+  font-weight: 900;
+  margin: 1.5em 0;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+
+.ift-copy-code {
+  border: 1px solid #222;
+  border-radius: 2em;
+  color: #222;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.685em;
+  font-weight: 800;
+  letter-spacing: 0.02em;
+  line-height: 1em;
+  margin-left: 1em;
+  padding: 1em 1em;
+  position: relative;
+  text-transform: uppercase;
+  transition: all 0.25s ease;
+}
+
+.gem-icon {
+  background-image: url("../images/coin.png");
+  height: 25px !important;
+  width: 35px !important;
+  display: block;
+  margin: 0 auto;
 }/*# sourceMappingURL=index.css.map */
