--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -632,7 +632,6 @@ input:focus {
 }
 
 .tinder--user-info {
-  pointer-events: none;
   padding: 20px 0;
 }
 .tinder--user-info h3 {
@@ -641,6 +640,7 @@ input:focus {
   color: #fff;
 }
 .tinder--user-info p {
+  pointer-events: none;
   font-size: 16px;
   color: #fff;
 }
@@ -767,9 +767,18 @@ input:focus {
   color: #fff;
   font-weight: 600;
   font-size: 13px;
+  width: 130px;
+  padding: 10px;
+}
+@media screen and (width: 428px) {
+  .activity-menu-wrap .activity-menu {
+    width: 110px;
+  }
 }
 .activity-menu-wrap .activity-menu.active {
-  border-bottom: 3px solid #fff;
+  border-radius: 50px;
+  padding: 10px;
+  background-image: linear-gradient(to right, #EC018B, #FC6667);
 }
 
 .message-wrap {
