--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,7 +21,12 @@ p {
   font-size: 16px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
   color: #010101;
@@ -1201,4 +1206,92 @@ label {
   width: 35px !important;
   display: block;
   margin: 0 auto;
+}
+
+.ag-format-container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.layout {
+  width: 100%;
+  position: relative;
+}
+.layout button {
+  position: absolute;
+  top: 15px;
+  z-index: 1;
+  left: 15px;
+}
+
+.layout a {
+  color: #666;
+}
+
+.slide {
+  display: none;
+}
+
+.slide li {
+  list-style: none;
+}
+
+.slide.slick-initialized {
+  display: block;
+}
+
+.slick-dots {
+  margin-top: 5px;
+  margin-left: -5px;
+  margin-right: -5px;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 60px;
+  left: 0;
+  width: 100%;
+  z-index: 4;
+}
+
+.slick-dots li {
+  display: inline-block;
+  max-height: 50px;
+  max-width: 50px;
+  margin: 5px;
+}
+
+.slick-dots li img {
+  height: auto;
+  width: 100%;
+  cursor: pointer;
+  opacity: 0.5;
+  border-radius: 5px;
+}
+
+.slick-dots li.slick-active img {
+  cursor: default;
+  opacity: 1;
+}
+
+.icon {
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+}
+
+.icon__cnt {
+  height: 100%;
+  width: 100%;
+}
+
+.img-slider {
+  background-position: top;
+  background-size: cover;
+  height: 400px;
+  width: 100%;
 }/*# sourceMappingURL=index.css.map */
