--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -563,6 +563,7 @@ input:focus {
 
 .tinder {
   height: 614px;
+  height: 510px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -686,7 +687,7 @@ input:focus {
 .tinder--user-dp {
   background-size: cover;
   background-position: top;
-  height: 500px;
+  height: 400px;
   border-radius: 40px;
   pointer-events: none;
 }
@@ -1208,7 +1209,7 @@ label {
   margin: 0 auto;
 }
 
-.ag-format-container {
+.user-photo-slider-container {
   width: 100%;
   margin: 0 auto;
 }
@@ -1294,4 +1295,13 @@ ul {
   background-size: cover;
   height: 400px;
   width: 100%;
+}
+
+.user-profile-info-wrap {
+  background: #fff;
+  padding: 15px;
+  border-radius: 34px 34px 0 0;
+  margin-top: -30px;
+  z-index: 1;
+  position: relative;
 }/*# sourceMappingURL=index.css.map */
