--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -704,6 +704,7 @@ input:focus {
 .tinder {
     // width: 100vw;
     height: 614px;
+    height: 510px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -833,7 +834,7 @@ input:focus {
 .tinder--user-dp {
     background-size: cover;
     background-position: top;
-    height: 500px;
+    height: 400px;
     border-radius: 40px;
     pointer-events: none;
 }
@@ -1461,7 +1462,7 @@ label {
 // User Profile Page 
 
 // User Slider 
-.ag-format-container {
+.user-photo-slider-container {
     width: 100%;
     margin: 0 auto;
 }
@@ -1548,4 +1549,13 @@ ul {
     background-size: cover;
     height: 400px;
     width: 100%;
+}
+
+.user-profile-info-wrap {
+    background: $ColorWhite;
+    padding: 15px;
+    border-radius: 34px 34px 0 0;
+    margin-top: -30px;
+    z-index: 1;
+    position: relative;
 }
