--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -541,10 +541,6 @@ input:focus {
   color: #2EA4FC;
 }
 
-.main-content {
-  margin-bottom: 120px;
-}
-
 .card-bg-1 {
   background-image: linear-gradient(170deg, #67D6F0, #549DF0);
 }
@@ -1304,4 +1300,78 @@ ul {
   margin-top: -30px;
   z-index: 1;
   position: relative;
+}
+
+.slider-full-height {
+  height: calc(100vh - 177px);
+}
+
+.mr-slider-wrap .mr-slider-dp {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.mr-slider-wrap .mr-slider-dp::after {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  background: #000;
+  left: 0;
+  top: 0;
+  border-radius: 16px;
+  opacity: 0.4;
+}
+.mr-slider-wrap .mr-more-btn {
+  background: 0;
+  border: 0;
+  color: #fff;
+  font-size: 36px;
+  margin-right: 10px;
+  margin-top: 10px;
+  position: relative;
+  z-index: 1;
+}
+.mr-slider-wrap .mr-photo-privicy {
+  text-align: center;
+  position: relative;
+  z-index: 1;
+  color: #fff;
+}
+.mr-slider-wrap .mr-photo-privicy p {
+  color: #fff;
+}
+.mr-slider-wrap .mr-photo-privicy i {
+  font-size: 40px;
+}
+.mr-slider-wrap .mr-photo-privicy button {
+  background-color: #F8AE00;
+  border: 0;
+  color: #fff;
+  padding: 5px 17px;
+  border-radius: 50px;
+  font-size: 14px;
+  text-transform: capitalize;
+  margin-top: 15px;
+}
+.mr-slider-wrap .mr-user-info {
+  background-image: linear-gradient(to top, rgb(13, 12, 13), rgba(13, 12, 13, 0));
+  border-radius: 0 0 16px 16px;
+  position: relative;
+  z-index: 1;
+}
+.mr-slider-wrap .mr-user-info h4 {
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+.mr-slider-wrap .mr-user-info p {
+  color: #fff;
+}
+.mr-slider-wrap .mr-user-info .user-info-interact button {
+  background: none !important;
+  border: 0;
 }/*# sourceMappingURL=index.css.map */
