Todays Match new slider and height width no scroll issue fixed with real device

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1565,7 +1565,10 @@ ul {
 
 // New mr Slider 
 .slider-full-height {
-    height: calc(100vh - 177px);
+    // -177 is perfect for emulator device
+    // height: calc(100vh - 177px);
+    // -240 is perfect for Real andriod device (POCO X3, Redme Note 8 , Vivo)
+    height: calc(100vh - 240px);
 }
 
 .mr-slider-wrap {
