--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -680,10 +680,14 @@ input:focus {
 
 // Base 
 
-// .main-content {
-//     margin-bottom: 120px;
-// }
+.main-content {
+    margin-bottom: 120px;
+}
 
+.main-content.no-padding {
+    margin: 0;
+    padding: 0;
+}
 
 // Main Slider / Tinder Slider Customization 
 .card-bg-1 {
