--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1310,6 +1310,111 @@ ul {
   z-index: 1;
   position: relative;
 }
+.user-profile-info-wrap .header h3 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #010101;
+}
+
+.circle-chart {
+  width: 60px;
+  height: 60px;
+}
+
+.circle-chart__circle {
+  stroke: #2EA4FC;
+  stroke-width: 2;
+  stroke-linecap: square;
+  fill: none;
+  animation: circle-chart-fill 2s reverse;
+  /* 1 */
+  transform: rotate(-90deg);
+  /* 2, 3 */
+  transform-origin: center;
+  /* 4 */
+}
+
+.circle-chart__circle--negative {
+  transform: rotate(-90deg) scale(1, -1);
+  /* 1, 2, 3 */
+}
+
+.circle-chart__background {
+  stroke: #efefef;
+  stroke-width: 2;
+  fill: none;
+}
+
+.circle-chart__info {
+  animation: circle-chart-appear 2s forwards;
+  opacity: 0;
+  transform: translateY(0.3em);
+}
+
+.circle-chart__percent {
+  dominant-baseline: middle;
+  text-anchor: middle;
+  font-size: 8px;
+}
+
+.circle-chart__subline {
+  text-anchor: middle;
+  font-size: 3px;
+}
+
+@keyframes circle-chart-fill {
+  to {
+    stroke-dasharray: 0 100;
+  }
+}
+@keyframes circle-chart-appear {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.skills {
+  color: black;
+}
+
+.skills_section {
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 80px;
+}
+
+.skill-head {
+  margin: 80px 0;
+}
+
+.skill-head h1 {
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.skill-head p {
+  margin-bottom: 10px;
+}
+
+.skills-area {
+  margin-top: 5%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.single-skill {
+  width: 25%;
+  margin-bottom: 80px;
+}
+
+.success-stroke {
+  stroke: #2EA4FC;
+}
+
+.circle-chart__background {
+  stroke: #ede4e4;
+  stroke-width: 1;
+}
 
 .slider-full-height {
   height: calc(100vh - 240px);
