--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1315,6 +1315,45 @@ ul {
   font-weight: 700;
   color: #010101;
 }
+.user-profile-info-wrap .header p {
+  color: #969598;
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 5px;
+}
+.user-profile-info-wrap .header p i {
+  color: #2EA4FC;
+}
+.user-profile-info-wrap .header .user-interact {
+  background-color: #F6F9FA;
+  margin-top: -50px;
+  padding: 20px 10px;
+}
+.user-profile-info-wrap .header .user-interact button,
+.user-profile-info-wrap .header .user-interact a {
+  background: none;
+  border: 0;
+}
+.user-profile-info-wrap .header .user-tag-pills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+}
+.user-profile-info-wrap .header .user-tag-pills p {
+  background: #FFEEEC;
+  color: #ED0789 !important;
+  border-radius: 50px;
+  padding: 10px 18px;
+  text-align: center;
+  margin: 6px;
+}
+.user-profile-info-wrap .header .user-bio {
+  background-color: #F6F9FA;
+}
+.user-profile-info-wrap .header .user-bio p {
+  font-size: 14px;
+  color: #000;
+}
 
 .circle-chart {
   width: 60px;
