--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -349,7 +349,7 @@ div[age_range_slider]>input[type=range]::-ms-tooltip {
     padding: 20px;
     border-radius: 100px;
     border: 0;
-    color: #969598;
+    color: $ColorBody;
     font-size: 18px;
     padding: 20px 30px;
     box-shadow: 0 0 99px rgb(0, 0, 0, 10%);
@@ -1564,10 +1564,61 @@ ul {
     z-index: 1;
     position: relative;
 
-    .header h3 {
-        font-size: $fs-h3;
-        font-weight: $fw-bold;
-        color: $ColorTitle;
+    .header {
+        h3 {
+            font-size: $fs-h3;
+            font-weight: $fw-bold;
+            color: $ColorTitle;
+        }
+
+        p {
+            color: $ColorBody;
+            font-size: $fs-h4;
+            font-weight: $fw-regular;
+            margin-top: 5px;
+
+            i {
+                color: $ColorSkyblue
+            }
+        }
+
+        .user-interact {
+            background-color: #F6F9FA;
+            margin-top: -50px;
+            padding: 20px 10px;
+
+            button,
+            a {
+                background: none;
+                border: 0;
+                // box-shadow: 0 3px 6px rgba(0, 0, 0, 0.07);
+                // border-radius: 50px;
+            }
+        }
+
+        .user-tag-pills {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: start;
+
+            p {
+                background: #FFEEEC;
+                color: #ED0789 !important;
+                border-radius: 50px;
+                padding: 10px 18px;
+                text-align: center;
+                margin: 6px;
+            }
+        }
+
+        .user-bio {
+            background-color: #F6F9FA;
+
+            p {
+                font-size: $fs-h6;
+                color: $ColorBlack
+            }
+        }
     }
 }
 
