--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -16,6 +16,7 @@ $ColorWhite: #fff;
 $ColorWhite2:#f3f3f3;
 $ColorWhite3:#EDF4F6;
 $ColorWhite4:#F1F1F1;
+$ColorWhite5:#F6F9FA;
 $ColorPrimary: red;
 $ColorBody:#969598;
 $ColorIcon:#A8AEBA;
@@ -1583,7 +1584,7 @@ ul {
         }
 
         .user-interact {
-            background-color: #F6F9FA;
+            background-color: $ColorWhite5;
             margin-top: -50px;
             padding: 20px 10px;
 
@@ -1612,12 +1613,83 @@ ul {
         }
 
         .user-bio {
-            background-color: #F6F9FA;
+            background-color: $ColorWhite5;
 
             p {
                 font-size: $fs-h6;
-                color: $ColorBlack
+                // color: $ColorBlack
+                padding: 10px 20px;
             }
+        }
+    }
+
+    .user-profile-inner-widget-wrap {
+        .user-profile-inner-widget-header {
+            background-image: linear-gradient(to right, $ColorMenu1, $ColorMenu2);
+            padding: 20px;
+            border-radius: 10px 10px 0 0;
+
+            h3 {
+                color: $ColorWhite;
+                font-size: $fs-h4;
+                font-weight: $fw-sbold;
+            }
+        }
+
+        .user-profile-inner-widget-body {
+
+            background: $ColorWhite5;
+            border-radius: 0 0 10px 10px;
+            padding: 10px 20px;
+
+            h3 {
+                color: $ColorTitle;
+                font-size: 17px;
+                font-weight: $fw-bold;
+                margin-bottom: 3px;
+            }
+
+            span {
+                margin-bottom: 10px;
+                display: block;
+                color: $ColorBody;
+            }
+
+            p {
+                font-size: $fs-h6;
+            }
+
+            .user-tag-pills {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: start;
+                padding: 0 !important;
+
+                p {
+                    font-size: 17px;
+                    background: #FFEEEC;
+                    color: #ED0789 !important;
+                    border-radius: 50px;
+                    padding: 10px 18px;
+                    text-align: center;
+                    margin: 6px;
+                }
+            }
+
+
+
+        }
+
+        .matches-btn {
+            background: $ColorGold;
+            padding: 15px;
+            display: block;
+            text-align: center;
+            width: 60%;
+            margin: auto;
+            border-radius: 100px;
+            color: $ColorWhite;
+            box-shadow: 0 3px 51px rgb (252, 197, 46, 52%);
         }
     }
 }
