--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1582,4 +1582,72 @@ ul {
 .mr-slider-wrap .mr-user-info .user-info-interact button {
   background: none !important;
   border: 0;
+}
+
+.matches-wrap {
+  background-image: url("../images/Matches.png");
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.matches-wrap .matches-header {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+.matches-wrap .matches-body {
+  padding-top: 150px;
+  text-align: center;
+}
+.matches-wrap .matches-body h1 {
+  font-family: "Dancing Script", cursive;
+  font-size: 48px;
+  font-weight: 700;
+  color: #fff;
+}
+.matches-wrap .matches-body p {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+}
+.matches-wrap .matches-body .both-matches-dp {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.matches-wrap .matches-body .both-matches-dp .matches-dp {
+  height: 130px;
+  width: 130px;
+  border-radius: 100px;
+  border: 3px solid #fff;
+  background-size: cover;
+  background-position: top;
+}
+.matches-wrap .matches-body .both-matches-dp .single-skill {
+  background: #fff;
+  height: 60px;
+  border-radius: 100px;
+  position: absolute;
+  top: 30px;
+  width: 60px;
+}
+.matches-wrap .matches-body .matches-btn {
+  margin-top: 100px !important;
+}
+.matches-wrap .matches-body .matches-btn a {
+  background: #2EA4FC;
+  color: #fff;
+  padding: 20px;
+  display: block;
+  width: 70%;
+  margin: auto;
+  margin-bottom: 15px;
+  border-radius: 50px;
+  box-shadow: 0 3px 51px rgba(46, 164, 252, 0.52);
+}
+.matches-wrap .matches-body .matches-btn :last-child {
+  background-color: #13193A;
+  box-shadow: none;
 }/*# sourceMappingURL=index.css.map */
