--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1901,3 +1901,83 @@ ul {
 }
 
 // New Mr Slider end 
+
+
+// Matches Page 
+.matches-wrap {
+    background-image: url("../images/Matches.png");
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+
+    .matches-header {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+
+    .matches-body {
+        padding-top: 150px;
+        text-align: center;
+
+        h1 {
+            font-family: $-ff-specialTitle;
+            font-size: $fs-48;
+            font-weight: $fw-bold;
+            color: $ColorWhite;
+        }
+
+        p {
+            color: $ColorWhite;
+            font-size: $fs-h5;
+            font-weight: $fw-medium;
+        }
+
+        .both-matches-dp {
+            display: flex;
+            justify-content: center;
+            position: relative;
+
+            .matches-dp {
+                height: 130px;
+                width: 130px;
+                border-radius: 100px;
+                border: 3px solid $ColorWhite;
+                background-size: cover;
+                background-position: top;
+            }
+
+            .single-skill {
+                background: #fff;
+                height: 60px;
+                border-radius: 100px;
+                position: absolute;
+                top: 30px;
+                width: 60px;
+            }
+        }
+
+        .matches-btn {
+            margin-top: 100px !important;
+
+            a {
+                background: $ColorSkyblue;
+                color: $ColorWhite;
+                padding: 20px;
+                display: block;
+                width: 70%;
+                margin: auto;
+                margin-bottom: 15px;
+                border-radius: 50px;
+                box-shadow: $shadow-1;
+            }
+
+            :last-child {
+                background-color: #13193A;
+                box-shadow: none;
+            }
+        }
+    }
+}
