Matches page done with animition

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1632,6 +1632,7 @@ ul {
   position: absolute;
   top: 30px;
   width: 60px;
+  z-index: 1;
 }
 .matches-wrap .matches-body .matches-btn {
   margin-top: 100px !important;
