--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1956,6 +1956,7 @@ ul {
                 position: absolute;
                 top: 30px;
                 width: 60px;
+                z-index: 1;
             }
         }
 
