--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -124,10 +124,15 @@ a {
 
 // Landing Page 
 .landing-wrap {
-    height: calc(100vh - 10vh);
+    // height: calc(100vh - 10vh);
+    height: 100vh;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+}
+
+.landing-bg {
+    text-align: center;
 }
 
 .landing-content {
