--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -412,6 +412,7 @@ div[age_range_slider]>input[type=range]::-ms-tooltip {
 
 .h-100vh {
     height: 100vh !important;
+    height: calc(100vh - 8vh) !important;
 }
 
 input:focus {
