--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1817,6 +1817,7 @@ ul {
     // height: calc(100vh - 177px);
     // -240 is perfect for Real andriod device (POCO X3, Redme Note 8 , Vivo)
     height: calc(100vh - 240px);
+    height: calc(100vh - 260px);
 }
 
 .mr-slider-wrap {
