--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2019,3 +2019,7 @@ ul {
     background-image: linear-gradient(to right, $ColorMenu1, $ColorMenu2) !important;
     color: $ColorWhite
 }
+
+.padding-bottom {
+    padding-bottom: 250px;
+}
