--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1536,7 +1536,7 @@ ul {
   height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
 }
 .mr-slider-wrap .mr-slider-dp::after {
   position: absolute;
