--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1840,7 +1840,7 @@ ul {
         height: 100%;
         background-size: cover;
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: top;
 
     }
 
