--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1703,6 +1703,28 @@ ul {
 
 .message-body {
   background-color: #E6EEF0;
+  height: calc(100vh - 4rem);
+  overflow: scroll;
+}
+.message-body .message-user-dp {
+  height: 50px;
+  width: 50px;
+  border-radius: 100px;
+  background-size: cover;
+  background-position: top;
+}
+.message-body .message-text {
+  background: #fff;
+  border-radius: 0 21px 21px 10px;
+  padding: 15px;
+  width: 85%;
+}
+.message-body .message-text img {
+  border-radius: 5px 20px 20px 20px;
+}
+.message-body .me .message-text {
+  border-radius: 21px 0 10px 21px;
+  text-align: end;
 }
 
 .message-header i {
