--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2046,6 +2046,8 @@ ul {
     background-color: $MessageBody;
     height: calc(100vh - 4rem);
     overflow: scroll;
+    position: relative;
+    padding-bottom: 70px;
 
     .message-user-dp {
         height: 50px;
@@ -2072,6 +2074,66 @@ ul {
             text-align: end;
         }
     }
+
+    .chat-box {
+        position: fixed;
+        bottom: 0;
+        background: $MessageBody;
+        left: 0;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        right: 0;
+
+        textarea {
+            width: 100%;
+            margin: 15px 0;
+            position: relative;
+            padding: 15px;
+
+            &:focus {
+                box-shadow: none;
+            }
+        }
+
+
+        .message-send-btn {
+            background: $ColorSkyblue;
+            color: $ColorWhite;
+            border: 0;
+            width: 40px;
+            height: 40px;
+            border-radius: 100px;
+            text-align: center;
+            line-height: 40px;
+            position: absolute;
+            right: 20px;
+            z-index: 9;
+            bottom: 22px;
+        }
+
+        .message-attachment-btn {
+            background: $ColorPink;
+            color: $ColorWhite;
+            border: 0;
+            width: 40px;
+            height: 40px;
+            border-radius: 100px;
+            text-align: center;
+            line-height: 40px;
+            position: absolute;
+            left: 20px;
+            z-index: 9;
+            bottom: 22px;
+        }
+    }
+}
+
+#fileInput {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
 }
 
 .message-header {
