--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2256,8 +2256,24 @@ img.hover-shadow {
 .hover-shadow:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 .message-header {
     i {
         font-size: 20px;
+    }
+}
+
+
+.image-preview-wrap {
+    position: absolute;
+    bottom: 70px;
+    left: 0;
+    background: #dae2e3;
+    width: 100%;
+    padding: 20px;
+
+    img {
+        width: 50px;
+        height: auto;
     }
 }
