--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1910,4 +1910,18 @@ img.hover-shadow {
 .image-preview-wrap img {
   width: 50px;
   height: auto;
+}
+.image-preview-wrap .msg-img-preview {
+  position: relative;
+}
+.image-preview-wrap .msg-img-preview button {
+  position: absolute;
+  border: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 100px;
+  top: -10px;
+  right: -10px;
+  text-align: center;
+  line-height: 20px;
 }/*# sourceMappingURL=index.css.map */
