Buy Credit page

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2314,6 +2314,7 @@ img.hover-shadow {
 
 .credit-package-wrap {
     margin-top: 50px;
+    margin-bottom: 150px;
 
     .slick-list {
         overflow: inherit !important;
