--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1940,6 +1940,7 @@ img.hover-shadow {
 
 .credit-package-wrap {
   margin-top: 50px;
+  margin-bottom: 150px;
 }
 .credit-package-wrap .slick-list {
   overflow: inherit !important;
