--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2148,28 +2148,28 @@ ul {
 }
 
 /* The Modal (background) */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: black;
-}
+// .modal {
+//     display: none;
+//     position: fixed;
+//     z-index: 1;
+//     padding-top: 100px;
+//     left: 0;
+//     top: 0;
+//     width: 100%;
+//     height: 100%;
+//     overflow: auto;
+//     background-color: black;
+// }
 
 /* Modal Content */
-.modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    width: 90%;
-    max-width: 1200px;
-}
+// .modal-content {
+//     position: relative;
+//     background-color: #fefefe;
+//     margin: auto;
+//     padding: 0;
+//     width: 90%;
+//     max-width: 1200px;
+// }
 
 /* The Close Button */
 .close {
